Mobile overflow issues - other than that, done

--- a/styles.css
+++ b/styles.css
@@ -19,9 +19,7 @@
     --sub-header-font-family: 'Playfair Display', serif;
     --main-header-font-family: 'Dela Gothic One', cursive;
 }
-html, body {
-    overflow-x:hidden 
-  } 
+
 /* Header formatting & styling */
 header li{
     font-size: 1.2em;
@@ -162,7 +160,7 @@ button:hover{
 }
 /* Tablet design */
 @media all and (max-width: 820px) { 
-    body{overflow-x: hidden;}
+    
     .container{
         margin: auto;
         width: 100%;
@@ -296,7 +294,7 @@ nav{
     order: 3;
 }
 body{
-   overflow-x: hidden;
+   overflow-x: none;
    /*Header is 100px large,  */
    grid-template-rows: 200px auto 30%;
    background-color: var(--main-bg-color);
@@ -502,9 +500,6 @@ main{
 video{
     width: 400px;
     min-width: 200px;
-}
-video:first-child{
-    margin-right: 20px;
 }
 
 .videos{
